# randomization-ci

./: CHANGELOG.md  LICENSE  README.md  RigdonHudgens.py  compute_pmax.py  fft.py  general_bernoulli.py  matching.py  pyproject.toml  randomization_test.py  search_utils.py  simulation_helpers.py  test.py
benchmarks/: __init__.py  benchmark_exact_ci.py  benchmark_matching_exact_ci.py  benchmark_rh_exact_ci.py  run_matching_benchmarks_1000.sh  run_matching_benchmarks_10000.sh
simulations/: __init__.py  _repo_path.py  run_general_bernoulli_ci_tests.py  run_matching_ci_tests.py  run_matching_ci_tests_balanced.py  test.py  test_general_bernoulli.py  test_rh.py
tests/: test_smoke.py
